users-service/users/src/main/java/com/example/users/errors/exceptions/userExceptions/UserNotFound.java
package com.example.users.errors.exceptions.userExceptions;

public class UserNotFound extends RuntimeException
{
    public UserNotFound(String message)
    {
        super(message);
    }
}
